# agent-file-cloud

./: .gitignore  API.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_AUDIT.md  DEPENDENCY_FIX_SUMMARY.md  EMBEDDING_CHECK.md  FINAL_TEST_REPORT.md  FIX_SUMMARY.md  FUNCTIONAL_AUDIT_REPORT.md  INSTALL_GUIDE.md  MIRROR_SETUP.md  MOBILE_OPTIMIZATION.md  OPTIMIZATION_REPORT.md  README.md  SEND_FORMAT.md  SKILL.md  USAGE.md  VENV_SETUP.md  VISUALIZATION_OPTIMIZATION.md  VISUALIZATION_OPTIMIZATION_V2.md  _meta.json  activate_skill.sh  agent_file_cloud.py  auto_cleanup.py  auto_update.sh  config_validator.py  data_manager.py  embedding_api.py  generate_graph_html.py  install.sh  pip.conf  plugin-config.json  pyproject.toml  requirements.txt  search_recommend.py  setup.cfg  storage_manager.py  test_add_files.py  (+1 more)
config/: CONFIG_GUIDE.md  config.example.json  config.template.json  files.json
hooks/openclaw/: HOOK.md
scripts/: backfill_storage_fields.py  check_dependencies.py  comprehensive_test.py  rebuild_qiniu_history.py
tests/: __init__.py  test_agent_file_cloud.py  test_data_manager.py  test_embedding_api.py
